<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/sd_activity_style" >

    <cn.kol.pes.widget.KoPageTitleLayoutView
        android:id="@+id/sd_common_title_view"
        style="@style/sd_common_top_bar_class_use_style" >
    </cn.kol.pes.widget.KoPageTitleLayoutView>

    <LinearLayout style="@style/sd_page_content_style" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sd_padding_common_edge_small"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/main_asset_asset_text"
                style="@style/sd_text_as_edit_style"
                android:text="@string/ko_title_scan_input_asset_number" />

            <Button
                android:id="@+id/main_asset_camera_btn_asset"
                style="@style/sd_button_bottom_bar_style"
                android:layout_width="189dp"
                android:layout_height="44dp"
                android:layout_marginLeft="@dimen/sd_padding_common_edge"
                android:layout_marginRight="2dp"
                android:padding="@dimen/sd_padding_common_edge_small"
                android:text="@string/ko_title_scan_asset" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/sd_padding_common_edge">
	    <Button
	        android:id="@+id/main_asset_cancel_check_asset_btn"
	        style="@style/sd_button_bottom_bar_no_weight_style"
	        android:layout_width="wrap_content"
	        android:paddingLeft="@dimen/sd_padding_common_edge"
	        android:paddingRight="@dimen/sd_padding_common_edge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:orientation="horizontal" >
        

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/sd_padding_common_edge_middle"
        android:paddingLeft="@dimen/sd_padding_common_edge_small"
        android:paddingRight="@dimen/sd_padding_common_edge_small" >

        <Button
            android:id="@+id/main_asset_check_asset_btn"
            style="@style/sd_button_bottom_bar_style"
            android:text="@string/ko_title_asset_check_item_title" />

        <Button
            android:id="@+id/main_asset_manager_check_btn"
            style="@style/sd_button_bottom_bar_style"
            android:text="@string/ko_title_manager_check"
            android:visibility="gone" />

        <Button
            android:id="@+id/main_asset_asset_list_btn"
            style="@style/sd_button_bottom_bar_style"
            android:text="@string/ko_title_asset_list" />

        <Button
            android:id="@+id/main_asset_failure_history_btn"
            style="@style/sd_button_bottom_bar_style"
            android:text="@string/ko_title_failure_history" />
    </LinearLayout>

</LinearLayout>