<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/sd_activity_style" >

    <cn.kol.pes.widget.KoPageTitleLayoutView
        android:id="@+id/sd_common_title_view"
        style="@style/sd_common_top_bar_class_use_style" >
    </cn.kol.pes.widget.KoPageTitleLayoutView>

    <LinearLayout style="@style/sd_page_content_style" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sd_padding_common_edge_small"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" >

                <TextView
                    android:id="@+id/main_asset_id_edit"
                    style="@style/sd_edit_text_style"
                    android:hint="@string/ko_title_scan_to_input_asset"
                    android:inputType="textVisiblePassword"
                    android:singleLine="true"
                    android:editable="false"
                    android:layout_centerVertical="true" />

                <ImageView
                    android:paddingLeft="@dimen/sd_padding_common_edge_huge"
                    android:paddingRight="@dimen/sd_padding_common_edge_middle"
                    android:id="@+id/main_process_asset_search_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ko_wip_id_search_icon_4"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone" />
            </RelativeLayout>

            <Button
                android:id="@+id/main_camera_btn_asset"
                style="@style/sd_button_bottom_bar_style"
                android:layout_width="189dp"
                android:layout_height="44dp"
                android:layout_marginLeft="@dimen/sd_padding_common_edge"
                android:layout_marginRight="2dp"
                android:padding="@dimen/sd_padding_common_edge_small"
                android:text="@string/ko_title_camera_input_asset" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sd_padding_common_edge_middle"
        android:layout_marginRight="@dimen/sd_padding_common_edge_middle"
        android:gravity="left|top"
        android:orientation="horizontal" >

        <TextView
            style="@style/sd_text_black_big_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:singleLine="true"
            android:text="@string/ko_title_operate_staff" />

        <TextView
            android:id="@+id/main_staff_name"
            style="@style/sd_text_black_big_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="1.0"
            android:singleLine="true"
            android:text="57766-朱倩倩"/>
        
            <TextView
	            android:id="@+id/main_machine_report_time"
	            style="@style/sd_text_black_big_style"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="left|center_vertical"/>

    </LinearLayout>
    

    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sd_padding_common_edge_middle"
        android:gravity="left|center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/sd_text_black_big_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:singleLine="true"
            android:text="@string/ko_title_process_date"
            android:paddingRight="@dimen/sd_padding_common_edge_small" />

        <TextView
            android:id="@+id/main_process_date"
            style="@style/sd_text_black_big_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:singleLine="true"/>
        
        <RadioGroup 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1.0"
            android:gravity="left"
            android:layout_marginLeft="@dimen/sd_padding_common_edge">
            <RadioButton 
                android:id="@+id/main_shift_day_radio"
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="白班"
            	android:layout_marginRight="@dimen/sd_padding_common_edge"/>
            
            <RadioButton 
                android:id="@+id/main_shift_night_radio"
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="晚班"/>
        </RadioGroup>
        
        <Button
	        android:id="@+id/main_process_reset_date_btn"
	        style="@style/sd_button_bottom_bar_no_weight_style"
	        android:layout_width="106dp"
	        android:layout_height="44dp"
	        android:layout_marginLeft="@dimen/sd_padding_common_edge"
	        android:padding="@dimen/sd_padding_common_edge_small"
	        android:text="@string/ko_title_reset_date_time" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/main_started_seq_parent_view"
        style="@style/sd_page_content_style"
        android:visibility="gone" >
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left|center_vertical"
	        android:orientation="horizontal" >
	        <TextView
	            style="@style/sd_text_black_middle_style"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingRight="@dimen/sd_padding_common_edge_small"
	            android:text="@string/ko_title_process_num" />
	
	        <TextView
	            android:id="@+id/main_started_seq_process_num"
	            style="@style/sd_text_gray_middle_style"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="@dimen/sd_padding_common_edge"
	            android:layout_weight="1.0"
	            android:gravity="left" />
	        
	        <TextView
	            style="@style/sd_text_red_middle_style"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="***生产中***"
	            android:layout_marginRight="@dimen/sd_padding_common_edge_big" />
        </LinearLayout>
        
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left|center_vertical"
	        android:orientation="horizontal" >
	        <TextView
	            style="@style/sd_text_black_middle_style"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingRight="@dimen/sd_padding_common_edge_small"
	            android:text="@string/ko_title_seq_start_time" />
	
	        <TextView
	            android:id="@+id/main_started_seq_start_time"
	            style="@style/sd_text_gray_middle_style"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="@dimen/sd_padding_common_edge_big" />
	    </LinearLayout>
        
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left|center_vertical"
	        android:orientation="horizontal"
	        android:visibility="gone" >
	        <TextView
	            style="@style/sd_text_black_middle_style"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingRight="@dimen/sd_padding_common_edge_small"
	            android:text="@string/ko_title_seq_input_qty" />
	
	        <TextView
	            android:id="@+id/main_started_seq_input_qty"
	            style="@style/sd_text_gray_middle_style"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="@dimen/sd_padding_common_edge_big" />
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:orientation="horizontal" >
        
        <LinearLayout 
            android:id="@+id/main_op_started_list_parent_layout"
            style="@style/sd_page_content_style" >

            <ListView
                android:id="@+id/main_process_list_list_view"
                style="@style/sd_common_list_view_style" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/sd_padding_common_edge_middle"
        android:paddingLeft="@dimen/sd_padding_common_edge_small"
        android:paddingRight="@dimen/sd_padding_common_edge_small" >

        <Button
            android:id="@+id/main_no_plan_produce_reply_btn"
            style="@style/sd_button_bottom_bar_style"
            android:text="@string/ko_title_no_plan_produce_reply_op" />

        <Button
            android:id="@+id/main_time_reply_btn"
            style="@style/sd_button_bottom_bar_style"
            android:text="@string/ko_title_time_reply_op" />

        <Button
            android:id="@+id/main_no_plan_materials_reply_btn"
            style="@style/sd_button_bottom_bar_style"
            android:text="@string/ko_title_no_plan_materials_reply"
            android:visibility="gone" />

        <Button
            android:id="@+id/main_check_receive_btn"
            style="@style/sd_button_bottom_bar_style"
            android:text="@string/ko_title_receive_order" />
    </LinearLayout>

</LinearLayout>