<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/sd_activity_style" >

    <cn.kol.pes.widget.KoPageTitleLayoutView
        android:id="@+id/sd_common_title_view"
        style="@style/sd_common_top_bar_class_use_style" >
    </cn.kol.pes.widget.KoPageTitleLayoutView>

    <ScrollView
        style="@style/sd_common_scroll_view_style"
        android:padding="@dimen/sd_padding_common_edge" >

        <LinearLayout
            style="@style/sd_page_content_style"
            android:layout_margin="0dp" >

            <cn.kol.pes.widget.KoJobInfoView
                android:id="@+id/gongxu_start_main_info_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </cn.kol.pes.widget.KoJobInfoView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sd_padding_common_edge_big"
        android:layout_marginRight="@dimen/sd_padding_common_edge_big"
        android:gravity="left|center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sd_padding_common_edge_middle"
            android:gravity="left|center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/sd_text_black_big_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:singleLine="true"
                android:minWidth="@dimen/ko_job_info_input_width"
                android:text="@string/ko_title_operate_staff" />

            <TextView
                android:id="@+id/op_start_staff_name"
                style="@style/sd_text_black_big_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/sd_text_black_big_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/ko_job_info_input_width"
                android:text="@string/ko_title_op_input_quan" />

            <EditText
                android:id="@+id/gx_start_input_quentity"
                style="@style/sd_text_as_edit_style"
                android:inputType="phone"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/sd_text_black_big_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/ko_job_info_input_width"
                android:text="@string/ko_title_op_start_time" />

            <TextView
                android:id="@+id/gx_start_start_date_time"
                style="@style/sd_text_as_edit_style"
                android:singleLine="true" />

            <Button
                android:id="@+id/gx_start_reset_date_time_btn"
                style="@style/sd_button_bottom_bar_no_weight_style"
                android:layout_width="106dp"
                android:layout_height="44dp"
                android:layout_marginLeft="@dimen/sd_padding_common_edge"
                android:padding="@dimen/sd_padding_common_edge_small"
                android:text="@string/ko_title_reset_date_time" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/op_start_asset_parent_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <Button 
            android:id="@+id/gx_start_op_start_btn"
            style="@style/sd_button_bottom_bar_no_weight_style"
            android:layout_marginTop="@dimen/sd_padding_common_edge_middle"
            android:layout_marginBottom="@dimen/sd_padding_common_edge_middle"
            android:text="@string/ko_title_op_start"/>
    </LinearLayout>

</LinearLayout>